header y main mobile

--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,9 @@
 </head>
 <body class="home">
     <header>
-        <img src="/images/logo.jpg" alt="">
-        <button><i class="fas fa-bars"></i></button>
-        <nav>
+        <div class="logo"></div>
+        <button class="header__burger"><i class="fas fa-bars"></i></button>
+        <nav class="header__menu">
             <ul>
                 <li><a href="">home</a></li>
                 <li><a href="">quienes</a></li>
@@ -24,73 +24,73 @@
         </nav>
     </header>
     <main>
-        <section class="box-banner">
+        <section class="home__box-banner">
             <img src="/images/img-banner.jpg" alt="banner">
         </section>
-        <section class="box-products">
-            <article class="product">
-                <div>
-                    <img src="/images/img-pdto-1.jpg" alt="imagen producto">
-                    <img src="/images/img-descuento.png" alt="descuento">
-                    <a href="" class="label"></a>
+        <section class="home__box-products">
+            <article class="home__product">
+                <div class="home__product__box-image">
+                    <img class="home__product__image" src="/images/img-pdto-1.jpg" alt="imagen producto">
+                    <img class="home__product__sticker" src="/images/img-descuento.png" alt="descuento">
+                    <a href="" class="home__product__box__zoom">AMPLIAR FOTO</a>
                 </div>
                 <h4>Lorem ipsum dolor</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias totam commodi deserunt maiores quibusdam? Vel.</p>
-                <a href="#">ver mas</a>
+                <a class="home__product__more" href="#">ver mas</a>
             </article>
-            <article class="product">
-                <div>
-                    <img src="/images/img-pdto-2.jpg" alt="imagen producto">
-                    <img src="/images/img-gratis.png" alt="gratis">
-                    <a href="" class="label"></a>
+            <article class="home__product">
+                <div class="home__product__box-image">
+                    <img class="home__product__image" src="/images/img-pdto-2.jpg" alt="imagen producto">
+                    <img class="home__product__sticker" src="/images/img-gratis.png" alt="descuento">
+                    <a href="" class="home__product__box__zoom">AMPLIAR FOTO</a>
                 </div>
                 <h4>Lorem ipsum dolor</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias totam commodi deserunt maiores quibusdam? Vel.</p>
-                <a href="#">ver mas</a>
+                <a class="home__product__more" href="#">ver mas</a>
             </article>
-            <article class="product">
-                <div>
-                    <img src="/images/img-pdto-3.jpg" alt="imagen producto">
-                    <img src="/images/img-nuevo.png" alt="nuevo">
-                    <a href="" class="label"></a>
+            <article class="home__product">
+                <div class="home__product__box-image">
+                    <img class="home__product__image" src="/images/img-pdto-3.jpg" alt="imagen producto">
+                    <img class="home__product__sticker" src="/images/img-nuevo.png" alt="descuento">
+                    <a href="" class="home__product__box__zoom">AMPLIAR FOTO</a>
                 </div>
                 <h4>Lorem ipsum dolor</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias totam commodi deserunt maiores quibusdam? Vel.</p>
-                <a href="#">ver mas</a>
+                <a class="home__product__more" href="#">ver mas</a>
             </article>
-            <article class="product">
-                <div>
-                    <img src="/images/img-pdto-1.jpg" alt="imagen producto">
-                    <img src="/images/img-descuento.png" alt="descuento">
-                    <a href="" class="label"></a>
+            <article class="home__product">
+                <div class="home__product__box-image">
+                    <img class="home__product__image" src="/images/img-pdto-1.jpg" alt="imagen producto">
+                    <img class="home__product__sticker" src="/images/img-descuento.png" alt="descuento">
+                    <a href="" class="home__product__box__zoom">AMPLIAR FOTO</a>
                 </div>
                 <h4>Lorem ipsum dolor</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias totam commodi deserunt maiores quibusdam? Vel.</p>
-                <a href="#">ver mas</a>
+                <a class="home__product__more" href="#">ver mas</a>
             </article>
-            <article class="product">
-                <div>
-                    <img src="/images/img-pdto-1.jpg" alt="imagen producto">
-                    <img src="/images/img-gratis.png" alt="gratis">
-                    <a href="" class="label"></a>
+            <article class="home__product">
+                <div class="home__product__box-image">
+                    <img class="home__product__image" src="/images/img-pdto-2.jpg" alt="imagen producto">
+                    <img class="home__product__sticker" src="/images/img-gratis.png" alt="descuento">
+                    <a href="" class="home__product__box__zoom">AMPLIAR FOTO</a>
                 </div>
                 <h4>Lorem ipsum dolor</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias totam commodi deserunt maiores quibusdam? Vel.</p>
-                <a href="#">ver mas</a>
+                <a class="home__product__more" href="#">ver mas</a>
             </article>
-            <article class="product">
-                <div>
-                    <img src="/images/img-pdto-1.jpg" alt="imagen producto">
-                    <img src="/images/img-nuevo.png" alt="nuevo">
-                    <a href="" class="label"></a>
+            <article class="home__product">
+                <div class="home__product__box-image">
+                    <img class="home__product__image" src="/images/img-pdto-3.jpg" alt="imagen producto">
+                    <img class="home__product__sticker" src="/images/img-nuevo.png" alt="descuento">
+                    <a href="" class="home__product__box__zoom">AMPLIAR FOTO</a>
                 </div>
                 <h4>Lorem ipsum dolor</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias totam commodi deserunt maiores quibusdam? Vel.</p>
-                <a href="#">ver mas</a>
+                <a class="home__product__more" href="#">ver mas</a>
             </article>
         </section>
     </main>
-    <footer>
+    <footer class="home__footer">
         <nav>
             <ul>
                 <li><a href="">home</a></li>
