--- a/views/index.html
+++ b/views/index.html
@@ -91,7 +91,7 @@
         </section>
     </main>
     <footer class="home__footer">
-        <nav>
+        <nav class="footer__menu">
             <ul>
                 <li><a href="">home</a></li>
                 <li><a href="">quienes</a></li>
