--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="home">
     <header>
-        <div class="logo"></div>
+        <img class="header__logo" src="/images/logo.jpg" alt="">
         <button class="header__burger"><i class="fas fa-bars"></i></button>
         <nav class="header__menu">
             <ul>
